--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "type dom app . ",
   "main": "src/main.ts",
   "scripts": {
-    "serve": "webpack-dev-server --mode=development --config ./build/webpack.config.js",
-    "build": "webpack --mode=production --config ./build/webpack.config.js",
-    "lib": "webpack --mode=none --config ./build/webpack.lib.config.js",
-    "js": "tsc",
-    "postversion": "rimraf dist && npm run build && cp README.md package.json js && cd js && npm publish",
+    "serve": "webpack-dev-server --mode=development --config build/webpack.config.js",
+    "build": "webpack --mode=production --config build/webpack.config.js",
+    "postversion": "rimraf dist && npm run build && cp README.md package.json dist && cd dist && npm publish",
     "test": "jest",
     "lint": "eslint src",
     "lint-fix": "eslint 'src/**/*.{ts,js,tsx,jsx}' --fix -o eslint_log.log",
     "uml": "tsuml2 --glob type-dom/type-node/web-element/*.ts ",
-    "docs": "typedoc --entryPointStrategy expand ./src",
-    "coverage": "typescript-coverage-report"
+    "docs": "typedoc --entryPointStrategy expand src",
+    "coverage": "typescript-coverage-report",
+    "git-push": "git add . && git commit -m 'edit' && git push origin main",
+    "git-pull": "git pull"
   },
   "keywords": [
     "typescript",
@@ -33,8 +33,8 @@
     "@babel/preset-react": "^7.22.5",
     "@types/file-saver": "^2.0.3",
     "@types/jest": "^29.5.2",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
@@ -49,13 +49,10 @@
     "jest": "^29.5.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.3",
-    "lint": "^0.8.19",
+    "lint": "^1.1.2",
     "mini-css-extract-plugin": "^2.7.6",
-    "postcss": "^8.4.24",
-    "postcss-loader": "^7.3.3",
-    "precss": "^4.0.0",
     "rimraf": "^5.0.5",
-    "sass": "^1.63.3",
+    "sass": "^1.69.3",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.9",
@@ -101,15 +98,5 @@
     "showRelativePath": true,
     "historyFile": "typecoverage.json",
     "noDetailWhenFailed": true
-  },
-  "nx": {
-    "targets": {
-      "build": {
-        "outputs": [
-          "{projectRoot}/dist",
-          "{projectRoot}/public/dist"
-        ]
-      }
-    }
   }
 }
